diesel_compile_tests/tests/fail/select_for_update_cannot_be_used_on_sqlite.rs
extern crate diesel;

use diesel::*;
use diesel::sqlite::SqliteConnection;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let mut conn = SqliteConnection::establish("").unwrap();
    users::table
        .for_update()
        .load(&mut conn)
        .unwrap();
}
