diesel_compile_tests/tests/fail/select_for_update_cannot_be_used_on_sqlite.stderr
error[E0277]: the trait bound `diesel::query_builder::locking_clause::ForUpdate: QueryFragment<Sqlite>` is not satisfied
  --> $DIR/select_for_update_cannot_be_used_on_sqlite.rs:16:10
   |
16 |         .load(&mut conn)
   |          ^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::ForUpdate`
   |
   = help: the following implementations were found:
             <diesel::query_builder::locking_clause::ForUpdate as QueryFragment<Mysql>>
             <diesel::query_builder::locking_clause::ForUpdate as QueryFragment<Pg>>
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::locking_clause::LockingClause`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `SelectStatement<FromClause<users::table>, DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::NoGroupByClause, diesel::query_builder::having_clause::NoHavingClause, diesel::query_builder::locking_clause::LockingClause>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, SqliteConnection, _>` for `SelectStatement<FromClause<users::table>, DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::NoGroupByClause, diesel::query_builder::having_clause::NoHavingClause, diesel::query_builder::locking_clause::LockingClause>`

error[E0277]: the trait bound `diesel::query_builder::locking_clause::NoModifier: QueryFragment<Sqlite>` is not satisfied
  --> $DIR/select_for_update_cannot_be_used_on_sqlite.rs:16:10
   |
16 |         .load(&mut conn)
   |          ^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::NoModifier`
   |
   = help: the following implementations were found:
             <diesel::query_builder::locking_clause::NoModifier as QueryFragment<Mysql>>
             <diesel::query_builder::locking_clause::NoModifier as QueryFragment<Pg>>
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `diesel::query_builder::locking_clause::LockingClause`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<Sqlite>` for `SelectStatement<FromClause<users::table>, DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::NoGroupByClause, diesel::query_builder::having_clause::NoHavingClause, diesel::query_builder::locking_clause::LockingClause>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, SqliteConnection, _>` for `SelectStatement<FromClause<users::table>, DefaultSelectClause<FromClause<users::table>>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, LimitOffsetClause<NoLimitClause, NoOffsetClause>, diesel::query_builder::group_by_clause::NoGroupByClause, diesel::query_builder::having_clause::NoHavingClause, diesel::query_builder::locking_clause::LockingClause>`
